# wordle

./: Cargo.toml  README.md
src/: main.rs  wordle.rs
src/resources/: words_bg_long.txt  words_bg_short.txt
src/translations/bg/: translation.ftl
src/translations/en/: translation.ftl
