[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0"
bracket-random = "0.8"
fluent = "0.16"
fluent-langneg = "0.13"
unic-langid = { version = "0.9", features = ["macros"] }
